# Pickel-Agent

./: README.en.md  README.md  config.yaml  pyproject.toml
.agent/skills/image-generator/: SKILL.md
.agent/skills/sbti-skill/: SKILL.md  answers.example.json  sbti.md
.agent/skills/sbti-skill/scripts/: sbti_skill.py
docs/superpowers/plans/: 2026-04-14-openviking-session-sync-refined-implementation.md  2026-04-21-runtime-provider-error-surfacing.md
docs/superpowers/specs/: 2026-04-21-anthropic-provider-design.md  2026-04-21-runtime-provider-error-surfacing-design.md
explore/: README.md  anthropic_limit_probe.py  openviking_long_term_memory.py
src/myopenclaw/cli/: chat.py
src/myopenclaw/conversations/: message.py  session.py  session_storage_mapper.py
src/myopenclaw/providers/: __init__.py  anthropic.py  factory.py  gemini.py
src/myopenclaw/runs/: context_usage.py
src/myopenclaw/runs/strategy/: react.py
src/myopenclaw/shared/: generation.py  model_config.py
tests/cli/: test_chat_loop.py
tests/config/: test_app_config.py
tests/conversations/: test_session.py  test_session_storage_mapper.py
tests/providers/: test_anthropic.py  test_gemini.py
tests/runs/: test_context_usage.py  test_runner.py
