[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pickel-agent"
version = "0.1.0"
description = "本地优先、高度可扩展的 AI 编码与工作空间自动化 Agent 运行期系统。 | A local-first, highly extensible AI Agent runtime for coding and workspace automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "google-genai>=1.68.0",
    "pydantic>=2.12.5",
    "prompt-toolkit>=3.0.0",
    "rich>=14.1.0",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "mcp[cli]>=1.26.0",
    "openviking>=0.3.5",
]

[project.scripts]
pickel = "myopenclaw.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
